# routes/books.js
@@ -8,9 +8,21 @@ router.get('/', booksController.getAllBooks);
 router.get('/:id', booksController.getBookById);
 
 // POST create new book
+/* #swagger.parameters['book'] = {
+	in: 'body',
+	description: 'Book payload',
+	required: true,
+	schema: { $ref: '#/definitions/BookInput' }
+} */
 router.post('/', booksController.createBook);
 
 // PUT update book by ID
+/* #swagger.parameters['book'] = {
+	in: 'body',
+	description: 'Book payload',
+	required: true,
+	schema: { $ref: '#/definitions/BookInput' }
+} */
 router.put('/:id', booksController.updateBook);
 
 // DELETE book by ID
